--- a/usage/markdown.qmd
+++ b/usage/markdown.qmd
@@ -10,8 +10,26 @@ format:
   pptx: default
 ---
 
-## This header
+Markdown is just a plain text format that is designed to be easy to write, and, even more importantly, easy to read.
 
-> quote
+For example:
 
-### Heay
+```md
+## Hello world
+
+> The world is nice.
+
+And this is **important** to _note_.
+```
+
+Will be rendered like this.
+
+## Hello world
+
+> The world is nice.
+
+And this is **important** to _note_.
+
+The quarto documentation provide a detailed documentation here.
+
+<https://quarto.org/docs/authoring/markdown-basics.html>
